<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".FirstPage">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header1"
            android:textSize="30sp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/brown"/>

        <TextView
            android:id="@+id/text2"
            android:layout_below="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header2"
            android:textSize="20sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/brown"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerInParent="true"
            android:src="@drawable/signinup" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <Button
            android:id="@+id/login"
            android:onClick="login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            android:text="@string/login"
            android:fontFamily="@font/inter_medium"
            android:textSize="15sp"
            android:textColor="@color/background"
            android:background="@drawable/button_orange1"/>

        <Button
            android:id="@+id/register"
            android:onClick="register"
            android:layout_below="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            android:text="@string/signup"
            android:fontFamily="@font/inter_medium"
            android:textSize="15sp"
            android:textColor="@color/orange"
            android:background="@drawable/button_signup1"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>