<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header1"
                android:textSize="25sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/brown"/>

            <TextView
                android:id="@+id/text2"
                android:layout_below="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header2"
                android:textSize="18sp"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/brown"/>

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/text2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="299dp"
                    android:layout_height="193dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/login2" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup2"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/brown"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Nama Lengkap"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="NIK"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Nomor HP"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Username"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/edit_text1"
                    android:hint="Re-password"
                    android:inputType="textPassword"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"/>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_centerHorizontal="true"
                        android:textAllCaps="false"
                        app:cornerRadius="20dp"
                        android:text="@string/signup"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="15sp"
                        android:textColor="@color/background"
                        android:backgroundTint="@color/orange"
                        android:background="@drawable/button_orange1"/>

                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progress_register"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/signup"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:id="@+id/imgview"
                            android:layout_width="371dp"
                            android:layout_height="28dp"
                            android:src="@drawable/or1"
                            android:scaleType="fitXY"
                            android:layout_gravity="center"/>

                        <LinearLayout
                            android:id="@+id/layout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="16dp"
                            android:gravity="center">

                            <ImageButton
                                android:id="@+id/IBgoogle"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:src="@drawable/google2"
                                android:scaleType="fitXY"
                                android:background="@color/transparent"/>

                            <ImageButton
                                android:id="@+id/IBfacebook"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:src="@drawable/facebook"
                                android:scaleType="fitXY"
                                android:layout_marginLeft="16dp"
                                android:background="@color/transparent"/>

                            <ImageButton
                                android:id="@+id/IBtwitter"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:src="@drawable/twitter"
                                android:scaleType="fitXY"
                                android:layout_marginLeft="16dp"
                                android:background="@color/transparent"/>

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sudah punya akun?"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/brown"/>
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="-12dp"
                android:text="@string/login"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/orange"
                android:background="@color/transparent"
                />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>